# AEP-agent-element-protocol

./: .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  BIOSECURITY.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NAME-POLICY.md  NOTICE  README.md  aep-memory-policy.rego  aep-policy.rego  aep-registry.yaml  aep-scene.json  aep-theme.yaml  docker-compose.public.yml  docker-compose.test-fresh.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
AEP-Base-Node/: README.md
AEP-Base-Node/agent-control-extreme/: README.md
AEP-Base-Node/crate/: Cargo.toml
AEP-Base-Node/crate/src/: dock_keys.rs  docking.rs  epscom.rs  lattice_log.rs  lib.rs  main.rs  pera.rs  side_channel_monitor.rs  task_manifest.rs
AEP-Base-Node/docs/: error-registry.md  multi-base-node-28b.md  multi-base-node-artifact-manifest.json
AEP-Base-Node/multi-base-node/: README.md
AEP-Base-Node/multi-base-node/crate/: Cargo.toml
AEP-Base-Node/multi-base-node/crate/src/: error.rs  failover.rs  lattice.rs  lib.rs  registry.rs
AEP-Base-Node/potomitan/: README.md  YGGDRASIL-ADAPTATION.md
AEP-Base-Node/potomitan/crate/: Cargo.toml
AEP-Base-Node/potomitan/crate/src/: lib.rs  peer.rs  routing.rs  supervisor.rs
AEP-Base-Node/registry/: README.md  catalog.json  nodes.json
AEP-Base-Node/signatures/: LICENSE-CONTENT  README.md
AEP-Components/: README.md
AEP-Components/aep-comm/: README.md
AEP-Components/aepassist/: README.md
AEP-Components/agentmesh/crate/: Cargo.toml
AEP-Components/agentmesh/crate/src/: lib.rs  tls.rs
AEP-Components/caw-framework/shim/windows/: CMakeLists.txt  envshim.cpp  inject.cpp
AEP-Components/conformance/crate/: Cargo.toml
AEP-Components/conformance/crate/src/: main.rs
AEP-Components/eu-ai-act-checker/crate/: Cargo.toml
AEP-Components/eu-ai-act-checker/crate/src/: lib.rs  main.rs
AEP-Components/lattice-channels/crate/: Cargo.toml
AEP-Components/lattice-channels/crate/src/: lib.rs
AEP-Components/lattice-crypto/crate/: Cargo.toml
AEP-Components/lattice-crypto/crate/src/: lib.rs
AEP-Components/lattice-memory/crate/: Cargo.toml
AEP-Components/lattice-memory/crate/src/: entry.rs  error.rs  lib.rs  main.rs  sqlite.rs  store.rs
AEP-Components/wasm/crate/: Cargo.toml
AEP-Components/wasm/crate/src/: lib.rs  main.rs
AEP-Composer-Lite/: README.md  server.mjs
AEP-Connectors/: README.md  catalog.json
AEP-Docks/: README.md
AEP-Docks/ucb/crate/: Cargo.toml
AEP-Docks/ucb/crate/src/: auth.rs  bridge.rs  config.rs  delegate.rs  egress.rs  http.rs  identity.rs  inference.rs  ingress.rs  journal.rs  lattice.rs  lib.rs  main.rs  manifest.rs  mcp.rs  store.rs  translator.rs
AEP-Policy-System/: SETUP.md  aep-noship-distribution.policy.yaml  coding-agent.policy.yaml  content-safety.policy.yaml  covenant-only.policy.yaml  full-governance.policy.yaml  lattice-channel-mandatory.gap  multi-agent.policy.yaml  network-egress-no-smtp.policy.yaml  strict-production.policy.yaml
AEP-Research-Paper/: README.md
AEP-SDKs/: README.md
AEP-SDKs/go/: go.mod  (+3 more)
AEP-Subprotocols/: README.md  catalog.json
AEP-Subprotocols/cli/: Cargo.toml
AEP-Subprotocols/cli/src/: main.rs
AEP-Subprotocols/coding-governance/: Cargo.toml  README.md  manifest.json
AEP-Subprotocols/coding-governance/src/: announce.rs  blast_radius.rs  catalog.rs  lib.rs  propose.rs  semantic_query.rs  solidify.rs  token.rs
AEP-Subprotocols/mcp-security/: Cargo.toml  README.md  manifest.json
AEP-Subprotocols/mcp-security/src/: lib.rs
AEP-Subprotocols/ui/: Cargo.toml  README.md  aep-registry.yaml  aep-scene.json  aep-theme.yaml  manifest.json
AEP-Subprotocols/ui/src/: lib.rs
AEP-User-Experience/: README.md  aep-base-node-preflight.mjs  aep-comm-harness-types.ts  aep-comm-harness.ts  aep-validate.js
AEP-main-skill/: README.md  SKILL.md  skill.md
aep-2.0-agent-harness/: CLAUDE.md  README.md  aep-registry.yaml  aep-scene.json  aep-theme.yaml  package.json
aep-2.1-agent-harness/: CLAUDE.md  README.md  aep-registry.yaml  aep-scene.json  aep-theme.yaml  package.json
aep-2.2-agent-harness/: CLAUDE.md  README.md  aep-registry.yaml  aep-scene.json  aep-theme.yaml  package.json
agent-control-extreme/: README.md
agent-control-hub/: README.md
agent-error-registry-example/: README.md  policy_checks.py  registry_config.yaml
config/: aep-registry.yaml  aep-scene.json  aep-theme.yaml
docker/: entrypoint.sh  runtime-deps.package.json
docs/: AEP-2.6-Spec-Reference.md  AEP-2.6-Spec-Reference.md.pdf.b64  COMPLIANCE.md  IDENTITY.md  LATTICE-MEMORY.md  MIGRATION-v1-to-v2.md  MIGRATION-v2.1-to-v2.2.md  MIGRATION-v2.5-to-v2.75.md  OWASP-MAPPING.md  POLICY-BUILDER.md  PROTOCOL-COMPARISON.md  RESOLVER.md  SCHEMA-BUILDER.md
harness/: aep-2.2-agent-harness.md  aep-2.5-agent-harness.md  aep-comm-harness.ts
hermes-governance-plugin/: README.md  install.sh
output-checker-example/: README.md  check_config.yaml  output_checker.py  standards.py
policies/: SETUP.md  aep-builder.policy.yaml  coding-agent.policy.yaml  content-safety.policy.yaml  covenant-only.policy.yaml  full-governance.policy.yaml  multi-agent.policy.yaml  readonly-auditor.policy.yaml  strict-production.policy.yaml
rust/: README.md
scripts/: gate-changelog-public-surface.sh  gate-no-noship-on-github.sh  test-2.75.sh
sdk/: sdk-aep-core.ts  sdk-aep-memory.py  sdk-aep-memory.ts  sdk-aep-protocols.py  sdk-aep-python.py  sdk-aep-react.tsx  sdk-aep-resolver.ts  sdk-aep-vue.ts
signatures/: LICENSE-CONTENT  LICENSE-TOOLING  README.md
skill-for-mcp-demo/: skill.md
src/: cli.ts  gateway.ts  index.ts
subprotocols/: protocol-aep-api.py  protocol-aep-event.py  protocol-aep-extensions-README.md  protocol-aep-iac.py  protocol-aep-workflow.py
tests/: cli.test.ts  collaboration.test.ts  gateway-chain.test.ts  gateway.test.ts  graph-engine.test.ts  knowledge.test.ts  mcp-security.test.ts  merkle.test.ts  permissions.test.ts  reference-lattice.test.ts  test_memory.py  test_protocols.py  test_resolver.py  test_validator.py  transpilers.test.ts  trust-rings.test.ts
(+3884 files in other folders)
