[workspace]
resolver = "2"
members = [
    "AEP-Components/lattice-crypto/crate",
    "AEP-Components/lattice-channels/crate",
    "AEP-Components/agentmesh/crate",
    "AEP-Base-Node/potomitan/crate",
    "AEP-Components/lattice-memory/crate",
    "AEP-Base-Node/crate",
    "AEP-Components/wasm/crate",
    "AEP-Components/conformance/crate",
    "AEP-Docks/ucb/crate",
    "AEP-Subprotocols/core",
    "AEP-Subprotocols/ui",
    "AEP-Subprotocols/commerce",
    "AEP-Subprotocols/mcp-security",
    "AEP-Subprotocols/workflows",
    "AEP-Subprotocols/rest-api",
    "AEP-Subprotocols/events",
    "AEP-Subprotocols/iac",
    "AEP-Subprotocols/coding-governance",
    "AEP-Subprotocols/cli",
]
default-members = ["AEP-Base-Node/crate"]

[workspace.package]
version = "2.8.0"
edition = "2021"
license = "Apache-2.0"
authors = ["thePM001 <thepm001@users.noreply.github.com>"]
repository = "https://github.com/thePM001/AEP-agent-element-protocol"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
usearch = "2.25.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"