[package]
name = "aep-subprotocol"
description = "AEP subprotocol CLI - validates all domain subprotocols"
version = "2.8.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "aep-subprotocol"
path = "src/main.rs"

[dependencies]
aep-subprotocol-core = { path = "../core" }
aep-subprotocol-ui = { path = "../ui" }
aep-subprotocol-commerce = { path = "../commerce" }
aep-subprotocol-mcp-security = { path = "../mcp-security" }
aep-subprotocol-workflows = { path = "../workflows" }
aep-subprotocol-rest-api = { path = "../rest-api" }
aep-subprotocol-events = { path = "../events" }
aep-subprotocol-iac = { path = "../iac" }
aep-subprotocol-coding-governance = { path = "../coding-governance" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"