[package]
name = "aep-subprotocol-coding-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coding governance subprotocol: intent, blast radius, SIEE, solidify"

[dependencies]
aep-subprotocol-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[lib]
path = "src/lib.rs"