[package]
name = "aep-subprotocol-mcp-security"
description = "AEP MCP Security subprotocol - tool poisoning and drift detection"
version = "2.8.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aep-subprotocol-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"