[package]
name = "aep-subprotocol-ui"
description = "AEP UI subprotocol - scene, FCR, and theme validation"
version = "2.8.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aep-subprotocol-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"