[package]
name = "multi-base-node-core"
description = "AEP 2.8b multi-base-node registry: nodes.json v2 parse, validate, Merkle sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"