[package]
name = "aep-potomitan"
description = "POTOMITAN mesh fallback adapted from Yggdrasil routing (Phase 4)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"