[package]
name = "aep-lattice-crypto"
description = "PQEncryptedCapsule for AEP 2.8 Lattice Channels (ML-KEM-768 + AES-256-GCM + ML-DSA-65)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
aes-gcm.workspace = true
rand.workspace = true
pqcrypto-mlkem.workspace = true
pqcrypto-mldsa.workspace = true
pqcrypto-traits.workspace = true
base64.workspace = true