[package]
name = "aep-lattice-memory"
description = "AEP 2.8 Lattice Memory: sqlite-vec persistence + USearch fast-path"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aep-memory"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
usearch = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }