[package]
name = "aep-ucb"
description = "AEP 2.8 Universal Connect Bridge - Rust ingress, egress, task manifest synthesis"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aep-ucb"
path = "src/main.rs"

[dependencies]
aep-agentmesh = { path = "../../../AEP-Components/agentmesh/crate" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "fs", "process"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }